syntax = "proto3";

import "google/protobuf/empty.proto";

package services.ping_pong;

message Request {
}

message Response {
}

service PingPong {
    rpc UnaryUnary (Request) returns (Response);
    rpc UnaryStream (Request) returns (stream Response);
    rpc StreamUnary (stream google.protobuf.Empty) returns (Response);
    rpc StreamStream (stream Request) returns (stream Response);
}